# quickpreview_wrapper

./: .gitignore  Cargo.toml  Makefile  README_QUICKLOOK_WINDOWS.md  README_WINDOWS_BUILD.md  README_WINDOWS_MSVC.md  build.rs  build_helper.rs  default.nix  install_windows_dependencies.bat  main.c  open_vcvarsall.bat  openfile  openfile.c  openfile.h  openfile.m  readme.md  setup-msvc.bat  setup-msvc.ps1  shell.nix
linux/: openfile_linux.c  openfile_linux.m  openfile_linux.rs
macos/: macos.m  openfile_macOS.c  openfile_macOS.m
src/: linux.rs  macos.rs  main.rs  windows.rs
windows/: openfile_windows.c
