[package]
name = "quickpreview_wrapper"
version = "0.1.0"
edition = "2021"

[dependencies]
rdev = "0.5.3"
clap = "3.0"

[target.'cfg(target_os = "linux")'.dependencies]
x11 = { version = "2.21.0", features = ["xlib"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"
cocoa = "0.24"
core-foundation = "0.9"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3", features = ["winuser", "shellapi"] }