[package]
name = "quickpreview_wrapper"
version = "0.1.0"
edition = "2021"

[dependencies]
rdev = "0.5.3"
clap = "3.0"
cocoa = "0.24.0"
objc = "0.2.7"
objc_id = "0.1.1"

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"
cocoa = "0.24"
core-foundation = "0.9"
objc_id = "0.1"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3", features = ["winuser", "processthreadsapi", "securitybaseapi", "handleapi", "fileapi", "errhandlingapi", "winbase", "winnt", "minwindef", "ntdef", "winerror"] }

[build-dependencies]
cc = "1.0"

[package.metadata.macos]
frameworks = ["Cocoa", "Quartz"]

[build-script]
name = "build"
path = "build.rs"
